--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - 9090:9090
     volumes:
       - /dev/net/tun:/dev/net/tun
-      - /etc/mihomo:/root/.config/mihomo
+      - /etc/mihomo:/etc/mihomo
 
     # 方案A：最简单（推荐测试用）
     privileged: true
