--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,6 +1,3 @@
-   
-   
-   
 services:
   meta:
     build:
@@ -17,7 +14,7 @@ services:
       - 9090:9090
     volumes:
       - /dev/net/tun:/dev/net/tun
-      - /etc/mihomo:/root/.config/mihomo
+      - /etc/mihomo:/etc/mihomo
 
     # 方案A：最简单（推荐测试用）
     privileged: true
